// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01_minimal should work with events 1`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello</span><input value=\\"hello\\"></div><div><span>Text: hello</span><input value=\\"hello\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 2`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello</span><input value=\\"hello\\"></div><div><span>Text: hello</span><input value=\\"hello\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 3`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 1</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello</span><input value=\\"hello\\"></div><div><span>Text: hello</span><input value=\\"hello\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 4`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello</span><input value=\\"hello\\"></div><div><span>Text: hello</span><input value=\\"hello\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 5`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello1</span><input value=\\"hello1\\"></div><div><span>Text: hello1</span><input value=\\"hello1\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 6`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello12</span><input value=\\"hello12\\"></div><div><span>Text: hello12</span><input value=\\"hello12\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 7`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello123</span><input value=\\"hello123\\"></div><div><span>Text: hello123</span><input value=\\"hello123\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;

exports[`01_minimal should work with events 8`] = `
"
    <div id=\\"app\\"><h1>Counter</h1><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><div><span>Count: 0</span><button type=\\"button\\">+1</button><button type=\\"button\\">-1</button></div><h1>TextBox</h1><div><span>Text: hello1234</span><input value=\\"hello1234\\"></div><div><span>Text: hello1234</span><input value=\\"hello1234\\"></div></div>
  <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>

"
`;
